compiling_error.txt
working.c: In function 'int main()':
working.c:16:9: error: expected ';' before 'while'
         while (cin.get() != '\n');
         ^
